<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TikTok</string>

    <!-- TikTok Sspport -->
    <string name="tiktok_fail_title">Ooops.</string>
    <string name="tiktok_fail_message">Something went horribly wrong.  Please contact TikTok support for further assistance.  Thanks.</string>

    <!-- Device Sspport -->
    <string name="google_maps_api_key">0xwxb_DAfECWYdmrqOYRwjKmfyvkvhvs7pIiL0g</string>

    <!-- Activity Titles -->
    <string name="tabs_name">TikTok</string>
    <string name="tab_list">Deals List</string>
    <string name="tab_map">Deals Map</string>
    <string name="tab_karma">Karma</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_cities">Cities</string>
    <string name="coupon_view">Deal</string>
    <string name="merchant_view">Merchant</string>
    <string name="location_picker_view">Location Picker</string>

    <!-- Karma -->
    <string name="karma_copy">Share Deals, Earn Karma, Be Rewarded for Your Loyalty! Tap Here for Details.</string>
    <string name="karma_sync_fail">Failed to sync karma. Try again later.</string>

    <!-- Cities -->
    <string name="cities_sync_fail">Failed to sync city data. Try again later.</string>

    <!-- Coupons -->
    <string name="coupon_sync_fail">Failed to sync deals. Try again.</string>

    <!-- Facebook -->
    <string name="facebook">Facebook</string>
    <string name="facebook_setup">Facebook Setup</string>
    <string name="facebook_not_setup">You are not currently connected to Facebook.  Connect before posting.</string>
    <string name="facebook_deal_post">Your deal has been posted!</string>
    <string name="facebook_deal_post_fail">Failed to post deal!</string>
    <string name="facebook_app_post">TikTok info has been posted!</string>
    <string name="facebook_app_post_fail">Failed to post TikTok info. Try again.</string>

    <!-- Twitter -->
    <string name="twitter">Twitter</string>
    <string name="twitter_setup">Twitter Setup</string>
    <string name="twitter_not_setup">You are not currently connected to Twitter.  Connect before tweeting.</string>
    <string name="twitter_deal_post">Your deal has been tweeted!</string>
    <string name="twitter_deal_post_fail">Failed to tweet deal. Try again.</string>
    <string name="twitter_app_post">TikTok info has been tweeted!</string>
    <string name="twitter_app_post_fail">Failed to tweet TikTok info. Try again.</string>

    <!-- Promo -->
    <string name="promo">Promotion Code</string>
    <string name="promo_copy">Enter a TikTok promotional code to win a FREE deal!!</string>
    <string name="promo_success">Congratulations, you have won a FREE deal!</string>
    <string name="promo_fail">Failed to redeem promotion, try again.</string>
    <string name="promo_used">Promotion code can only be redeemed once, try another code.</string>
    <string name="promo_invalid">The promotion code you entered was not recognized, try another code.</string>

    <!-- Location -->
    <string name="location_search">Location Search</string>
    <string name="location_not_found">Location not found. Try again.</string>
    <string name="location_search_fail">Something went horribly wrong. Try again.</string>

    <!-- Device Sspport -->
    <string name="device_support">Device Support</string>
    <string name="device_no_sms">Sending SMS is not supported on this device.</string>
    <string name="device_no_email">Sending Email is not supported on this device.</string>

    <!-- Merchant Pin -->
    <string name="merchant_pin">Merchant Pin</string>
    <string name="merchant_pin_copy">Enter Merchant Pin number to validate deal!</string>
    <string name="merchant_pin_success">Deal successfully validated! Thank you for using TikTok!</string>
    <string name="merchant_pin_fail">Failed to validate merchant pin with the server.  Try again.</string>

    <!-- Coupon Stubs -->
    <string name="stub_coupon_title">Buy an Offer, Get Another One Free!</string>
    <string name="stub_coupon_details">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.\n\nTikTok Terms and Conditions:\nwww.tiktok.com/terms</string>
    <string name="stub_coupon_expires_at">Offer expires at 7:00pm!</string>
    <string name="stub_coupon_expire_time">00:00:00</string>
    <string name="stub_coupon_barcode">0123456</string>
    <string name="stub_merchant_name">MERCHANT NAME</string>
    <string name="stub_merchant_address">2516 Mathews Ave, Redondo Beach, CA, 90278</string>
    <string name="stub_merchant_category">Category</string>
    <string name="stub_merchant_phone">555-555-5555</string>
    <string name="stub_merchant_url">www.tiktok.com</string>
    <string name="stub_merchant_details">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</string>
    <string name="stub_location_name">LOCATION NAME</string>
    <string name="stub_location_address">123 Street Address,\nCity, ST, Zipcode</string>
    <string name="stub_location_phone">555-555-5555</string>

    <!-- Karma Screen -->
    <string name="karma_facebook">Facebook</string>
    <string name="karma_twitter">Twitter</string>
    <string name="karma_sms">SMS</string>
    <string name="karma_email">Email</string>
    <string name="karma_referrals">Referrals</string>
    <string name="karma_empty">-</string>

    <!-- Alert Dialog -->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>

    <!-- Gender -->
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>

</resources>
