<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for individual coupon entries in a list -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/coupon"
        android:background="@drawable/whitish_gradient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <FrameLayout
            android:layout_width="106dip"
            android:layout_height="106dip"
            android:padding="5dip" >

            <LinearLayout
                android:id="@+id/coupon_gradient"
                android:layout_width="96dip"
                android:layout_height="96dip"
                android:background="@drawable/coupon_icon"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dip" >

                <FrameLayout
                    android:layout_width="96dip"
                    android:layout_height="64dip"
                    android:background="@color/white"
                    android:gravity="center" >

                    <!-- Icon shown next to the title/text -->
                    <ImageView
                        android:id="@+id/coupon_icon"
                        android:src="@drawable/icon03"
                        android:layout_gravity="center"
                        android:layout_width="64dip"
                        android:layout_height="64dip" />

                </FrameLayout>

                <!-- Coupon Expire Time -->
                <TextView
                    android:id="@+id/coupon_expire"
                    android:text="@string/stub_coupon_expire_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:shadowDx=".5"
                    android:shadowDy=".5"
                    android:shadowRadius=".5"
                    android:shadowColor="@color/black"
                    android:paddingLeft="2dip"
                    android:paddingRight="2dip"
                    android:paddingTop="2dip" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:padding="5dip"
            android:orientation="vertical" >

            <!-- Merchant Name -->
            <TextView
                android:id="@+id/coupon_merchant"
                android:text="@string/stub_merchant_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingTop="1dip" />

            <!-- Coupon Title -->
            <TextView
                android:id="@+id/coupon_title"
                android:text="@string/stub_coupon_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:lines="3"
                android:paddingTop="1dip" />

            <!-- Coupon Expires At -->
            <TextView
                android:id="@+id/coupon_expires_at"
                android:text="@string/stub_coupon_expires_at"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/tiktok_blue"
                android:paddingTop="1dip" />

        </LinearLayout>

    </LinearLayout>

    <!-- Sash -->
    <ImageView
        android:id="@+id/coupon_sash"
        android:src="@drawable/redeemedsash"
        android:layout_width="65dip"
        android:layout_height="65dip"
        android:padding="2dip" />

</FrameLayout>
