<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="bottom"
    android:orientation="vertical" >

    <!-- Coupon -->
    <LinearLayout
        android:id="@+id/coupon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="150"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >

            <!-- Scroll Container -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:padding="5dip"
                android:orientation="vertical" >

                <!-- Title -->
                <TextView android:id="@+id/title"
                    android:text="@string/stub_coupon_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:lines="2"
                    android:padding="3dip" />

                <!-- Icon / Map -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dip" >

                    <!-- Icon Container -->
                    <LinearLayout
                        android:id="@+id/gradient"
                        android:layout_width="96dip"
                        android:layout_height="96dip"
                        android:background="@drawable/coupon_icon"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dip" >

                        <!-- Icon White Backing -->
                        <FrameLayout
                            android:id="@+id/coupon_gradient"
                            android:layout_width="96dip"
                            android:layout_height="64dip"
                            android:background="@color/white"
                            android:gravity="center" >

                            <com.actionbarsherlock.internal.widget.IcsProgressBar
                                android:id="@+id/icon_progress"
                                style="@style/Widget.Sherlock.Light.ProgressBar"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <!-- Icon -->
                            <ImageView
                                android:id="@+id/icon"
                                android:contentDescription="Merchant Icon"
                                android:src="@drawable/icon03"
                                android:layout_gravity="center"
                                android:layout_width="64dip"
                                android:layout_height="64dip" />

                        <!-- Icon White Backing End -->
                        </FrameLayout>

                        <!-- Coupon Expire Time -->
                        <TextView
                            android:id="@+id/expire"
                            android:text="@string/stub_coupon_expire_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:shadowDx=".5"
                            android:shadowDy=".5"
                            android:shadowRadius=".5"
                            android:shadowColor="@color/black"
                            android:paddingLeft="2dip"
                            android:paddingRight="2dip"
                            android:paddingTop="2dip" />

                    <!-- Icon Container End -->
                    </LinearLayout>

                    <!-- Map Container -->
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/coupon_map"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="3dip" >

                        <!-- Map -->
                        <com.google.android.maps.MapView
                            android:id="@+id/map"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:enabled="true"
                            android:clickable="true"
                            android:focusable="false"
                            android:apiKey="@string/google_maps_api_key" />

                    <!-- Map Container End -->
                    </LinearLayout>

                <!-- Icon / Map End-->
                </LinearLayout>

                <!-- Share -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <!-- Twitter -->
                    <ImageView
                        android:id="@+id/twitter"
                        android:src="@drawable/sharetwitter"
                        android:contentDescription="Twitter Share Button"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:onClick="onClickTwitter"
                        android:clickable="true" />

                    <!-- Facebook -->
                    <ImageView
                        android:id="@+id/facebook"
                        android:src="@drawable/sharefacebook"
                        android:contentDescription="Facebook Share Button"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:onClick="onClickFacebook"
                        android:clickable="true" />

                    <!-- More -->
                    <ImageView
                        android:id="@+id/more"
                        android:src="@drawable/sharemore"
                        android:contentDescription="More Share Button"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="5dip"
                        android:onClick="onClickMore"
                        android:clickable="true" />

                <!-- Share End -->
                </LinearLayout>

                <!-- Details -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="2dip"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:orientation="vertical" >

                    <!-- Merchant -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:onClick="onClickMerchant"
                        android:clickable="true" >

                        <!-- Merchant Info -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical" >

                            <!-- Merchant Name -->
                            <TextView
                                android:id="@+id/merchant"
                                android:text="@string/stub_merchant_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:textSize="12sp" />

                            <!-- Merchant Address -->
                            <TextView
                                android:id="@+id/address"
                                android:text="@string/stub_merchant_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="11sp"
                                android:textColor="@color/black"
                                android:paddingBottom="2dip" />

                        <!-- Merchant Info End -->
                        </LinearLayout>

                        <!-- Merchant Button -->
                        <ImageView
                            android:src="@drawable/arrowmore"
                            android:contentDescription="Merchant Details"
                            android:layout_weight=".09"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:onClick="onClickMerchant"
                            android:clickable="true" />

                    <!-- Merchant End -->
                    </LinearLayout>

                    <!-- Coupon Details -->
                    <TextView
                        android:id="@+id/details"
                        android:text="@string/stub_coupon_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:textSize="14sp"
                        android:textColor="@color/black"
                        android:paddingTop="5dip"
                        android:paddingBottom="5dip" />

                <!-- Details End -->
                </LinearLayout>

            <!-- Scroll Container End -->
            </LinearLayout>

        </ScrollView>

    <!-- Coupon End -->
    </LinearLayout>

    <FrameLayout
        android:layout_gravity="bottom|center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <!-- Default -->
        <ImageButton
            android:id="@+id/banner_redeem"
            android:src="@drawable/redeembaritembutton"
            android:background="@drawable/blue_gradient"
            android:scaleType="centerInside"
            android:onClick="onClickRedeem"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- Expired -->
        <ImageView
            android:id="@+id/banner_expired"
            android:src="@drawable/dealexpiredbanner"
            android:contentDescription="Coupon Expired Banner"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:layout_gravity="bottom|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- SoldOut -->
        <ImageView
            android:id="@+id/banner_soldout"
            android:src="@drawable/dealsoldoutbanner"
            android:contentDescription="Coupon SoldOut Banner"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:layout_gravity="bottom|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Info -->
        <ImageView
            android:id="@+id/banner_info"
            android:src="@drawable/infobanner"
            android:contentDescription="Coupon Info Banner"
            android:adjustViewBounds="true"
            android:visibility="gone"
            android:layout_gravity="bottom|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Redeemed -->
        <FrameLayout
            android:id="@+id/banner_redeemed"
            android:visibility="gone"
            android:onClick="OnClickValidateMerchantPin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:src="@drawable/dealactivebanner"
                android:contentDescription="Coupon Redeemed Banner"
                android:adjustViewBounds="true"
                android:layout_gravity="bottom|center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

                <Button
                    android:id="@+id/barcode"
                    android:text="@string/stub_coupon_barcode"
                    android:background="@drawable/barcode"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:shadowColor="@color/black"
                    android:clickable="false"
                    android:paddingTop="8dip"
                    android:paddingBottom="8dip"
                    android:paddingLeft="13dip"
                    android:paddingRight="13dip"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="8" />

            </LinearLayout>

        <!-- Redeemed End -->
        </FrameLayout>

    </FrameLayout>

</LinearLayout>
